<resources>
    <string name="app_name">BFFrameAdmin</string>
    <string name="admin_login"><u>Login:</u></string>
    <string name="user_name">User Name:</string>
    <string name="user_password">User Password: </string>
    <string name="add_new_animal">Add NEW Animal</string>
    <string name="edit_remove_animal">Edit/Remove an Animal</string>
    <string name="logout">Logout</string>
    <string name="animal_name">Name: </string>
    <string name="foster_time">Foster Time: </string>
    <string name="weeks"> Weeks</string>
    <string name="age">Age: </string>
    <string name="months"> Months</string>
    <string name="male">Male: </string>
    <string name="female">Female: </string>
    <string name="aminals_description">Description..</string>
    <string name="save">Save</string>
    <string name="additional_options">Tick up to 3 additional boxes bellow if the animal is not suitable to be homed with the following:</string>
    <string name="no_dogs">No Dogs</string>
    <string name="no_cats">No Cats</string>
    <string name="no_other_animals">No Other Animals</string>
    <string name="no_kids_under">No Kids Under 12</string>
    <string name="requieres_vet_visits">Requieres Vet Visits</string>

    <string name="animal_name_example"><u>Fluffy</u></string>
    <string name="underline">___________________________________________________</string>
</resources>
