<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_options_initial_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context="com.example.android.bfframeadmin.OptionsInitialPage">

    <ImageButton
        android:onClick="onClickAddAnimal"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/pin"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/outlines" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:text="@string/add_new_animal"/>
    <ImageButton
        android:onClick="onClickEditAnimal"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/outlines"
        android:src="@drawable/edit"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_remove_animal"
        android:textSize="30dp"/>
    <Button
        android:onClick="onClickLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="20dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"/>



</LinearLayout>
